--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Daniel",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.16.0",
     "@socket.io/admin-ui": "^0.5.1",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
@@ -27,6 +28,6 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.4"
   }
 }
